// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/classification/ClassificationBadge should render default component 1`] = `
<Badge
  className="classification-badge"
  type="warning"
>
  Confidential
</Badge>
`;

exports[`features/classification/ClassificationBadge should render tooltip when specified 1`] = `
<Tooltip
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  position="top-center"
  text="Sensitive"
  theme="default"
>
  <Badge
    className="classification-badge"
    type="warning"
  >
    Confidential
  </Badge>
</Tooltip>
`;

exports[`features/classification/ClassificationBadge should render tooltip with position when specified 1`] = `
<Tooltip
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  position="middle-left"
  text="Sensitive"
  theme="default"
>
  <Badge
    className="classification-badge"
    type="warning"
  >
    Confidential
  </Badge>
</Tooltip>
`;
